composer/modules/js-tests/src/test/resources/passing/tests/ballerina-test/src/test/resources/test-src/lang/annotations/variable-as-attribute-value.bal

string stringvalue = getString();

@Args{value : stringvalue}
function foo () {
    // do nothing
}

annotation Args {
    string value;
}

function getString()(string) {
    return "sample";
}