composer/modules/js-tests/src/test/resources/failing/tests/ballerina-test/src/test/resources/test-src/types/map/map-initializer-with-string-template.bal
function testMapInitWithStringTemplateAsKey() (map) {
    string prefix = "first";
    map m = {string `{{prefix}}name` : "John"};
    return m;
}
